--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@popperjs/core": "^2.11.8",
         "@symfony/webpack-encore": "^4.3.0",
         "bootstrap": "^5.3.0",
         "core-js": "^3.23.0",
+        "jquery": "^3.7.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.63.6",
         "sass-loader": "^13.0.0",
