--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@babel/preset-env": "^7.16.0",
         "@popperjs/core": "^2.11.8",
         "@symfony/webpack-encore": "^4.3.0",
+        "@types/jquery": "^3.5.16",
         "bootstrap": "^5.3.0",
         "core-js": "^3.23.0",
         "jquery": "^3.7.0",
