--- a/.env
+++ b/.env
@@ -37,5 +37,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://aae5fb0d0ec47b:086bc638338693@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+MAILER_URL=smtp://localhost
 ###< symfony/mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+###< symfony/swiftmailer-bundle ###
