--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1",
+        "wowjs": "^1.1.3"
     }
 }
