--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,9 +1,9 @@
 framework:
-    default_locale: fr
+    default_locale: FR
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
-            - fr
+            - FR
 #        providers:
 #            crowdin:
 #                dsn: '%env(CROWDIN_DSN)%'
