--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://aae5fb0d0ec47b:086bc638338693@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+MAILER_DSN=smtp://82c5c0a1e7e1a9:570f3026129f2f@sandbox.smtp.mailtrap.io:2525
 MAILER_URL=smtp://localhost
 ###< symfony/mailer ###
 
