--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://82c5c0a1e7e1a9:570f3026129f2f@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=smtp://ee7367bdda17c3:c51d19a47ec63c@sandbox.smtp.mailtrap.io:2525
 MAILER_URL=smtp://localhost
 ###< symfony/mailer ###
 
@@ -46,3 +46,7 @@ MAILER_URL=smtp://localhost
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 ###< symfony/swiftmailer-bundle ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
