--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=2050ddc2a55b1e22a2f4964988971007
 ###< symfony/framework-bundle ###
 
@@ -37,8 +37,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://82c5c0a1e7e1a9:570f3026129f2f@sandbox.smtp.mailtrap.io:2525
-MAILER_URL=smtp://localhost
+MAILER_DSN=gmail://rh.clunysoise@gmail.com:587?encryption=tls&auth_mode=login
+MAILER_SENDER_ADDRESS=rh.clunysoise@gmail.com
 ###< symfony/mailer ###
 
 ###> symfony/swiftmailer-bundle ###
