--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=2050ddc2a55b1e22a2f4964988971007
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://zsnprrjlacluny:b52Bo73i@zsnprrjlacluny.mysql.db/zsnprrjlacluny?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -40,9 +40,3 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MAILER_DSN=gmail://rh.clunysoise@gmail.com:587?encryption=tls&auth_mode=login
 MAILER_SENDER_ADDRESS=rh.clunysoise@gmail.com
 ###< symfony/mailer ###
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-###< symfony/swiftmailer-bundle ###
